# pixelfold

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  parser.rs  renderer.rs
src/search/: client.rs  download.rs  mod.rs  types.rs
src/visualization/: mod.rs  network.rs  surface.rs
