[package]
name = "pixelfold"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
glam = "0.30.9"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nom = "8.0.0"
pdbtbx = "0.12.0"
petgraph = "0.6"
ratatui = "0.29.0"
rayon = "1.10"
rust-sasa = "0.5.0"
