[package]
name = "pixelfold"
version = "0.5.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
crossterm = "0.29.0"
flate2 = "1.1.8"
futures = "0.3.31"
glam = "0.30.9"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nom = "8.0.0"
pdbtbx = "0.12.0"
petgraph = "0.6"
ratatui = "0.29.0"
rayon = "1.10"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rust-sasa = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
